xer-1 - updated the DbContextFactory to accept DbContextOptions with a generic DbContext type

--- a/src/Xerris.DotNet.Data.Tests/Xerris.DotNet.Data.Tests.csproj
+++ b/src/Xerris.DotNet.Data.Tests/Xerris.DotNet.Data.Tests.csproj
@@ -31,6 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Xerris.DotNet.Data.PostgreSQL\src\Xerris.DotNet.Data.PostgreSQL\Xerris.DotNet.Data.PostgreSQL.csproj" />
       <ProjectReference Include="..\Xerris.DotNet.Data\Xerris.DotNet.Data.csproj" />
     </ItemGroup>
 
